<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DroidAlone</string>
    <string name="password">Password</string>
    <string name="password_summary">Activation Password</string>
    <string name="password_key">PASSWORD</string>
    <string name="forward_to_mail">Forward to mail</string>
    <string name="forward_to_mail_summary">Check this to enable mail forward</string>
    <string name="forward_to_mail_key">ENABLE_MAIL</string>
    <string name="mail_to_forward">Mail notify recipient</string>
    <string name="mail_to_forward_summary">Address to forward the mail to</string>
    <string name="mail_to_forward_key">MAIL_TO_FORWARD</string>
    <string name="forward_to_sms">Forward to sms</string>
    <string name="forward_to_sms_summary">Check this to enable sms forward</string>
    <string name="forward_to_sms_key">ENABLE_SMS</string>
    <string name="sms_to_forward">Sms notify target</string>
    <string name="sms_to_forward_summary">Number to forward the sms to</string>
    <string name="sms_to_forward_key">NUMBER_TO_FORWARD</string>
    <string name="reply_enable">Enable I\'m away reply</string>
    <string name="reply_enable_summary">Check this to enable I\'m away reply</string>
    <string name="reply_enable_key">ENABLE_REPLY</string>
    <string name="reply_category">Reply message</string>
    <string name="reply">Reply to incoming calls</string>
    <string name="reply_name">reply</string>
    <string name="reply_summary">Reply to forward</string>
    <string name="reply_key">REPLY</string>
    <string name="gmail_pwd">Gmail password</string>
    <string name="gmail_pwd_summary">Password of the account to be used to forward messages</string>
    <string name="gmail_pwd_key">gmail_pwd</string>
    <string name="gmail_user">Gmail userid</string>
    <string name="gmail_user_summary">User id of the gmail account used to forward</string>
    <string name="gmail_user_key">gmail_user</string>
    <string name="call_from">Call from %1$s %2$s</string>
    <string name="activate">Activate</string>
    <string name="deactivate">Disable</string>
    <string name="options">Options</string>
    <string name="forwarding_options">Forwarding options</string>
    <string name="forwarding_options_summary">Forwarding incoming events options</string>
    <string name="gmail_account_options">Gmail account</string>
    <string name="gmail_account_screen_summary">Gmail account user and pwd</string>
    <string name="not_valid_number_message">is not a valid phone number</string>
    <string name="not_valid_mail_message">is not a valid email address</string>
    <string name="status_expect_value">Possible status values are on or off</string>
    <string name="invalid_status_value">Invalid status value</string>
    <string name="doesnt_start_with">Does not start with</string>
    <string name="empty_reply_message">Reply is empty</string>
    <string name="ok_name">OK</string>
    <string name="error_name">Error</string>
    <string name="not_valid_number_message_full">%1$s is not a valid phone number, please correct it</string>
    <string name="not_valid_mail_message_full">%1$s is not a valid email address, please correct it</string>
    <string name="invalid_mail_user_full">Empty email user or password, please fill them in gmail account section</string>
    <string name="invalid_mail_user">Email user not set, can\'t enable mail forwarding</string>
    <string name="invalid_mail_pwd">Email password not set, can\'t enable mail forwarding</string>
    <string name="network_not_available">Network not available</string>
    <string name="home_alone_event">Droid Alone Event</string>
    <string name="events">Received events</string>
    <string name="delete_all">Delete all</string>
    <string name="forwarding_not_enabled">At least one forwarding type must be enabled</string>
    <string name="event_list">Managed events</string>
    <string name="reply_notified_to">Reply %1$s notified to %2$s</string>
    <string name="sent_via_sms">Sent via sms</string>
    <string name="name_not_found">Name not found</string>
    <string name="name_not_valid_numbers">Provided name does not have any phone number associated</string>
    <string name="sent_via_mail">Sent via mail</string>
    <string name="command_executed">Command executed. Received from </string>
    <string name="incoming_sms">Incoming sms</string>
    <string name="failed_to_send_email_to">Failed to send mail to</string>
    <string name="email_body_not_sent">Mail not sent was:</string>
    <string name="failed_to_send_sms_to">Failed to send sms to</string>
    <string name="sms_body_not_sent">Sms not sent was:</string>
    <string name="notify_error">Error</string>
    <string name="to">to</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="tutorial_title">Droid Alone Wizard</string>
    <string name="wizard_mail_title">Mail forwarding settings</string>
    <string name="wizard_mail_intro">DroidAlone needs your GMail user and password to send emails. The mail recipient may be different from your gmail address. Leave the fields empty to disable this feature</string>
    <string name="wizard_sms_reply_title">Sms settings</string>
    <string name="wizard_sms_reply_intro">You must provide a target sms number to be notified via sms. If you want to send an automatic reply
  	to callers fill the reply field. Leave the fields empty to disable this feature</string>

    <string name="loop_message">Loop message</string>
	<string name="loop_message_full">Message %1$s received from DroidAlone not forwarded</string>
    <string name="finish">Finish</string>
    <string name="wizard">Wizard</string>
    <string name="back">Back</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="empty_mail_values">All values must be filled or mail forwarding will be disabled. Press ok to confirm disabled forwarding, cancel to edit</string>
    <string name="empty_sms_number">Sms number must be filled or forwarding to sms will be disabled. Press ok to continue with forwarding disabled, cancel to edit</string>
    <string name="reply_notified">Automatic reply sent</string>
    <string name="help_requested">Help request</string>
    <string name="get_number_invalid_name">you must provide get number a name to look for</string>
    <string name="help_requested_full">%1$s requested help message</string>
    <string name="no_name_found">No valid name found for %1$s</string>
    <string name="number_for_contact">Number for %1$s: %2$s</string>
    <string name="mail_activated_message">Droid Alone: activated from %s</string>
    <string name="failed_to_send_activ_mail">Failed to send activation mail, DroidAlone not enabled. Try to use sms forwarding with -sms: option</string>
    <string name="flushed_calls">Missed from %1$s %2$s time %3$s</string>
    <string name="already_enabled_error">Status already on</string>
    <string name="already_disabled_error">Status already off</string>
    <string name="location_not_found">Unable to find location</string>
    <string name="inactive_state">Disabled</string>
    <string name="active_state">Enabled</string>
    <string name="active_state_reboot">Enabled after reboot</string>
    <string name="status_changed">Status Changed</string>
    <string name="help_name">Help</string>
    <string name="message_header">alone:</string>
    <string name="please_set_password">Please set password</string>
    <string name="intro">Welcome to Droid Alone. This wizard will guide you through the application setup. \nHit cancel if you want to
     go to the application. You can relaunch this wizard by pressing menu button from main view.</string>
    <string name="help_file_name">help.html</string>
    <string name="change_log_title">Changelog</string>
    <string name="change_log">Version 1.6: Added skip handled calls option. You can choose if you want to get notified or not of picked up calls while droidalone is active</string>
     <string name="skip_handled_key">skiphandled</string>
     <string name="skip_handled_calls">Skip handled calls</string>
     <string name="skip_handled_summary">Does not notify handled calls</string>
     <string name="skipped">Skipped:</string>
     <string name="skipped_call">Skipped call</string>
    <string name="clean">Clean</string>
    <string name="no_events_to_show">No events to show</string>
    <string name="no_events_to_show_description">Send sms with #PASS-s:on\nto activate</string>
    <string name="license_name">Licenses</string>

     </resources>
