<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<android.support.v7.widget.GridLayout
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    grid:useDefaultMargins="true"
    grid:alignmentMode="alignBounds"
    grid:columnOrderPreserved="false"
    grid:columnCount="1">

    <android.support.v7.widget.Space
            android:layout_height="10dip"
            />
	<TextView
        style="@style/WizardTitle"
	    android:text="@string/wizard_mail_title"
	    android:layout_width="fill_parent"/>

    
	<TextView
        style="@style/WizardText"
	    android:paddingTop="10dip"
	    android:text="@string/wizard_mail_intro"/>

    <EditText
        android:hint="@string/gmail_user"
        style="@style/WizardEditText"
        android:id="@+id/Wizard_gmail_user"/>

    <EditText
        style="@style/WizardEditText.Password"
        android:hint="@string/gmail_pwd"
        android:id="@+id/Wizard_gmail_pwd"/>

    <EditText
        style="@style/WizardEditText"
        android:hint="@string/mail_to_forward"
        android:id="@+id/Wizard_mail_target"/>

    <android.support.v7.widget.Space
            android:layout_column="0"
            grid:layout_gravity="fill" />

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content">


        <Button android:id="@+id/MailBackButton"
                android:text="@string/back"
                android:layout_weight="2"
                style="@style/WizardButton" />


        <Button android:id="@+id/MailNextButton"
                android:text="@string/next"
                android:layout_weight="1"
                style="@style/WizardButton" />

    </LinearLayout>
</android.support.v7.widget.GridLayout>
</ScrollView>
