<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <android.support.v7.widget.GridLayout
            xmlns:grid="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            grid:useDefaultMargins="true"
            grid:alignmentMode="alignBounds"
            grid:columnOrderPreserved="false"
            grid:columnCount="1">

        <android.support.v7.widget.Space
                android:layout_height="10dip"
                />
        <TextView
                style="@style/WizardTitle"
                android:text="@string/wizard_sms_reply_title"
                android:layout_width="fill_parent"/>


        <TextView
                style="@style/WizardText"
                android:paddingTop="10dip"
                android:text="@string/wizard_sms_reply_intro" />


        <EditText
                style="@style/WizardEditText"
                android:hint="@string/sms_to_forward"
                android:id="@+id/Wizard_sms_target"/>


        <EditText
                style="@style/WizardEditText"
                android:hint="@string/reply"
                android:id="@+id/Wizard_reply_message"/>

        <android.support.v7.widget.Space
                grid:layout_gravity="fill" />

        <LinearLayout android:orientation="horizontal"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content">


            <Button android:id="@+id/SmsBackButton"
                    android:text="@string/back"
                    android:layout_weight="2"
                    style="@style/WizardButton" />


            <Button android:id="@+id/SmsNextButton"
                    android:text="@string/finish"
                    android:layout_weight="1"
                    style="@style/WizardButton" />

        </LinearLayout>
    </android.support.v7.widget.GridLayout>
</ScrollView>
