<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <android.support.v7.widget.GridLayout
            xmlns:grid="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            grid:useDefaultMargins="true"
            grid:alignmentMode="alignBounds"
            grid:columnOrderPreserved="false"
            grid:columnCount="1">

        <android.support.v7.widget.Space
                android:layout_height="10dip"
                />
        <TextView
                style="@style/WizardTitle"
                android:text="@string/tutorial_title"
                android:layout_width="fill_parent"/>


        <TextView
                style="@style/WizardText"
                android:paddingTop="10dip"
                android:text="@string/intro"/>


        <EditText
                style="@style/WizardEditText.Password"
                android:hint="@string/password_summary"
                android:id="@+id/Wizard_password"/>


        <android.support.v7.widget.Space
                android:layout_column="0"
                grid:layout_gravity="fill" />

        <LinearLayout android:orientation="horizontal"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content">


            <Button android:id="@+id/CancelButton"
                    android:text="@string/cancel"
                    android:layout_weight="2"
                    style="@style/WizardButton" />


            <Button android:id="@+id/NextButton"
                    android:text="@string/next"
                    android:layout_weight="1"
                    style="@style/WizardButton" />

        </LinearLayout>
    </android.support.v7.widget.GridLayout>
</ScrollView>
